# armenian-bank-voice-ai

./: .env.example  .gitignore  README.md  armenian-bank-voice-ai-plan.md  pyproject.toml  tesst.md
config/: banks.yaml
data/acba/: branches.json  credits.json  deposits.json
scripts/: ingest_bank_data.py
src/agent/: assistant.py  config.py  main.py
src/audio/: __init__.py  faster_whisper_stt.py
src/rag/: __init__.py  chunker.py  config.py  indexer.py  retriever.py
src/scraping/: scraper.py
src/scraping/utils/: pdf_utils.py  text_utils.py
src/vectorstore/: __init__.py  chroma_client.py  config.py
